fix the video on a sm screens and add justify alignment on a text around the video part

--- a/src/styles/blocks/_browser.scss
+++ b/src/styles/blocks/_browser.scss
@@ -80,11 +80,16 @@
   &__player {
     display: block;
 
-    width: 475px;
-    height: 350px;
+    width: 100%;
+    height: 230px;
     margin: 0 auto;
 
     border: none;
+
+    @include bp-up(sm) {
+      width: 475px;
+      height: 350px;
+    }
   }
 
   &__block {
